<resources>
    <string name="app_name">My First Application</string>
    <string name="hello_world">My Hello World</string>
    <string name="edit_message">Input Message</string>
    <string name="button_send">Send</string>
    <string name="default_shit">Default</string>
    <string name="key_off">Whatever Offline</string>
    <string name="key_on">Whatever online</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment_2">Hello second Blank Fragment</string>
    <string name="noodle">Noodle</string>
    <string name="action_favorite">Favorit</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="subtitle">huhuhu</string>
    <string name="button_default_mode">Start lerning</string>
    <string name="default_wordfields_1">default_wordfield</string>
    <string name="default_wordfields_2">default_wordfield</string>
    <string name="default_wordfields_3">default_wordfield</string>
    <string name="default_wordfields_4">default_wordfield</string>
    <string name="default_wordfields_5">default_wordfield</string>
    <string name="default_wordfields_6">default_wordfield</string>
    <string name="default_wordfields_7">default_wordfield</string>
    <string name="default_wordfields_8">default_wordfield</string>
    <string name="default_wordfields_9">default_wordfield</string>
    <string name="default_wordfields_10">default_wordfield</string>
    <string name="default_wordfields_11">default_wordfield</string>
    <string name="default_wordfields_12">default_wordfield</string>
    <string name="default_wordfields_13">default_wordfield</string>
    <string name="default_wordfields_14">default_wordfield</string>
    <string name="default_wordfields_15">default_wordfield</string>
    <string name="expand_wordfields">Choose wordfields</string>
</resources>
