<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.MainFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="128dp">
        <Button
            android:text="@string/button_default_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_default_mode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expand_wordfields"
            android:clickable="true"
            android:onClick="expandWordfields">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expand_wordfields"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_wordfields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/default_wordfields_t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_1"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_2"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_3"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_4"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_5"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_6"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_7"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_8"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_9"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_10"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_11"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_12"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/default_wordfields_t13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_13"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_14"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/default_wordfields_t15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_wordfields_15"/>
                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:max="10"
                    android:progress="5"
                    android:id="@+id/default_wordfields_s15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
